# cpplox-tree-walk

./: CMakeLists.txt  README.md  lox.cpp  main.py
Editor/: AutoCompleter.py  Editor.py  EditorLexer.py  FileManager.py  FuzzySearcher.py  MainLoxWindow.py  SimTerminal.py  resouces.py
Editor/css/: style.qss
Editor/icons/: resouces.qrc
include/: BuiltInClass.hpp  Expr.hpp  Object.hpp  Parser.hpp  Stmt.hpp  lox.hpp
src/builtins/: BuiltInClass.cpp  BuiltInIo.cpp
src/interpreter/: CMakeLists.txt  Interpreter.cpp
src/lexer/: CMakeLists.txt  Scanner.cpp
src/logger/: CMakeLists.txt
src/parser/: CMakeLists.txt  Parser.cpp
src/utils/: Environment.cpp
